--- a/local.env
+++ b/local.env
@@ -1,5 +1,5 @@
-JDBC_DATABASE_URL=jdbc:mysql://localhost:3306/test
+JDBC_DATABASE_URL=jdbc:mysql://localhost:3306/codegym-airbnb-test
 JDBC_DATABASE_USERNAME=root
-JDBC_DATABASE_PASSWORD=
+JDBC_DATABASE_PASSWORD=0988853299
 JDBC_DATABASE_DRIVER=com.mysql.cj.jdbc.Driver
 SPRING_JPA_HIBERNATE_DIALECT=org.hibernate.dialect.MySQL5Dialect
